<resources>
    <string name="app_name" translatable="false">End Portal Finder</string>
    <string name="nav_header_title" translatable="false">End Portal Finder</string>
    <string name="nav_header_subtitle" translatable="false"><a href ="https://github.com/yogg-soggot">github.com/yogg-soggot</a></string>
    <string name="bug_report">Bug report</string>
    <string name="my_email" translatable="false">nikita.iv666@gmail.com</string>
    <string name="email_subject">End Portal Finder bug report</string>
    <string name="usage_guide_pdf_name">Usage Guide En.pdf</string>

    <!-- Nav Drawer Menu -->
    <string name="menu_finder">Finder</string>
    <string name="menu_portals">Portals</string>
    <string name="menu_usage_guide">Usage Guide</string>

    <!-- Finder fragment -->
    <string name="enter_z_hint">Coordinate Z</string>
    <string name="enter_x_hint">Coordinate X</string>
    <string name="enter_angle_hint">Eye Angle</string>
    <string name="get_coordinates">Calculate Coordinates</string>
    <string name="point1_cords">First Point</string>
    <string name="point2_cords">Second Point</string>

    <string name="portalx" translatable="false">X = %1d ± %2d</string>
    <string name="portalz" translatable="false">Z = %1d ± %2d</string>

    <string name="not_all_fields_entered">Not all fields are entered</string>
    <string name="attention">Attention</string>

    <string name="error_moderate">Too high evaluation error. Consider making another measurement when you are close</string>
    <string name="error_critical">Too high evaluation error. Try reading the instruction</string>
    <string name="error_invalid_portal">Search error. Eyes of Ender point to different portals.
        Make another measurement with different points</string>

    <string name="portal_saved">Portal successfully saved to database</string>

    <!-- Portals Fragment -->
    <string name="title_hint">Name (optional)</string>
    <string name="x_hint" translatable="false">x</string>
    <string name="z_hint" translatable="false">z</string>
    <string name="plus_minus" translatable="false">±</string>
    <string name="edit_error_x">x error</string>
    <string name="edit_error_z">x error</string>
    <string name="checkbox_actual_coordinates">Enter actual coordinates</string>
    <string name="save">Save</string>
    <string name="error_coordinates_not_entered">Portal coordinates are not entered</string>

</resources>