<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/minecraft_background"
    tools:context=".ui.finder.FinderFragment"
    tools:ignore="contentDescription">

    <View
        android:id="@+id/divider3"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/point_1_angle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_second_point"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/point_2_z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_z_hint"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/point_1_z"
        app:layout_constraintTop_toBottomOf="@+id/point_2_x" />

    <EditText
        android:id="@+id/point_2_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_x_hint"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/point_1_x"
        app:layout_constraintTop_toBottomOf="@+id/tv_second_point" />

    <EditText
        android:id="@+id/point_2_angle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_angle_hint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal|numberSigned"
        android:shadowColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/point_2_z"
        app:layout_constraintTop_toBottomOf="@+id/point_2_z" />

    <EditText
        android:id="@+id/point_1_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_x_hint"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/point_2_x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_first_point" />

    <EditText
        android:id="@+id/point_1_z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_z_hint"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/point_2_z"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/point_1_x" />

    <EditText
        android:id="@+id/point_1_angle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_angle_hint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal|numberSigned"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/point_1_z"
        app:layout_constraintTop_toBottomOf="@+id/point_1_z" />

    <Button
        android:id="@+id/button_compute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/get_coordinates"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/point_2_angle" />

    <TextView
        android:id="@+id/r_portal_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="#FFC107"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_compute"
        tools:text="X: 1643 + 100" />

    <TextView
        android:id="@+id/r_portal_z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#FFC107"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_portal_x"
        tools:text="Z: -530 - 50" />

    <TextView
        android:id="@+id/tv_first_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/point1_cords"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_second_point"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_second_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/point2_cords"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_first_point"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/point_1_angle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider2"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/point_1_angle"
        app:layout_constraintEnd_toStartOf="@+id/tv_first_point"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/button_compute"
        app:layout_constraintEnd_toEndOf="@+id/divider3"
        app:layout_constraintStart_toEndOf="@+id/divider2"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:src="@drawable/ic_save"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>